test/parse/expr/convert-sat-disabled.txt
;;; ERROR: 1
(module
  (func
    f32.const 0
    i32.trunc_s:sat/f32
    drop

    f32.const 0
    i32.trunc_u:sat/f32
    drop

    f64.const 0
    i32.trunc_s:sat/f64
    drop

    f64.const 0
    i32.trunc_u:sat/f64
    drop

    f32.const 0
    i64.trunc_s:sat/f32
    drop

    f32.const 0
    i64.trunc_u:sat/f32
    drop

    f64.const 0
    i64.trunc_s:sat/f64
    drop

    f64.const 0
    i64.trunc_u:sat/f64
    drop))
(;; STDERR ;;;
out/test/parse/expr/convert-sat-disabled.txt:5:5: error: opcode not allowed: i32.trunc_s:sat/f32
    i32.trunc_s:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:9:5: error: opcode not allowed: i32.trunc_u:sat/f32
    i32.trunc_u:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:13:5: error: opcode not allowed: i32.trunc_s:sat/f64
    i32.trunc_s:sat/f64
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:17:5: error: opcode not allowed: i32.trunc_u:sat/f64
    i32.trunc_u:sat/f64
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:21:5: error: opcode not allowed: i64.trunc_s:sat/f32
    i64.trunc_s:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:25:5: error: opcode not allowed: i64.trunc_u:sat/f32
    i64.trunc_u:sat/f32
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:29:5: error: opcode not allowed: i64.trunc_s:sat/f64
    i64.trunc_s:sat/f64
    ^^^^^^^^^^^^^^^^^^^
out/test/parse/expr/convert-sat-disabled.txt:33:5: error: opcode not allowed: i64.trunc_u:sat/f64
    i64.trunc_u:sat/f64
    ^^^^^^^^^^^^^^^^^^^
;;; STDERR ;;)
